[gd_scene load_steps=9 format=3 uid="uid://dnr55gnjvu4md"]

[ext_resource type="Script" uid="uid://bl5uygjmrjoa2" path="res://scripts/goober_spawner_poppup.gd" id="1_cms7n"]
[ext_resource type="FontFile" uid="uid://2abf7m1kg5x5" path="res://assets/Daydream DEMO.otf" id="3_rhyki"]
[ext_resource type="Texture2D" uid="uid://crdk0140r872j" path="res://assets/goober.png" id="3_v2i7o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pf55w"]
atlas = ExtResource("3_v2i7o")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_quhvv"]
atlas = ExtResource("3_v2i7o")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6ch2"]
atlas = ExtResource("3_v2i7o")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1kri"]
atlas = ExtResource("3_v2i7o")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ukr84"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf55w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quhvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6ch2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1kri")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="GooberSpawnerPoppup" type="Node2D"]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_cms7n")

[node name="GooberButton" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 50
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -103.0
offset_right = 106.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.700292, 0.46832, 0.308831, 1)

[node name="Button" type="Button" parent="."]
z_index = 51
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -103.0
offset_right = -82.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 11
text = "x"

[node name="Button2" type="Button" parent="."]
z_index = 51
offset_left = -101.0
offset_top = -60.0
offset_right = -70.0
offset_bottom = -29.0
text = "+"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 50
position = Vector2(2, -45)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ukr84")
animation = &"idle"
frame_progress = 0.620096

[node name="Goobernumber" type="Label" parent="."]
z_index = 51
offset_left = -64.0
offset_top = -56.0
offset_right = -24.0
offset_bottom = -22.5
theme_override_fonts/font = ExtResource("3_rhyki")
theme_override_font_sizes/font_size = 16
text = "x"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
